--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,27 @@
 display: flex;
 }
 
+.hero {
+    position: relative;
+    padding: 80px 0;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: white;
+}
+
+
 
 .navbar{
     margin-top: 0px;
@@ -632,18 +653,3 @@ font-size: 20px;
     padding-top: 0px;
 }
 
-.img{
-    position: absolute;
-    width: 30px;
-    top: 37px;
-    bottom: 43px;
-    right: 0px;
-    background-color: #fff;
-    z-index: 2;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    box-sizing: border-box;
-}
