--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,11 @@
 display: flex;
 }
 
+.bt-hode{
+    background: none;
+    border: none;
+}
+
 .hero {
     position: relative;
     padding: 80px 0;
